--- a/announce.html
+++ b/announce.html
@@ -19,7 +19,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="https://www.reddit.com/r/CharCrafter/s/GuT2AtGCVy" target="_blank">Groups</a></li>
+                <li><a href="https://www.reddit.com/r/CharCrafter/s/GuT2AtGCVy" target="_blank">Subreddit</a></li>
                 <li class="active"><a href="announce.html">Announcements</a></li>
                 <li><a href="https://github.com/AntDev210/charcraftergame">Download</a></li>
             </ul>
@@ -38,3 +38,4 @@
     <script src="js/announce.js"></script>
 </body>
 </html>
+
